# qzxing

./: .gitignore  CMakeLists.txt  env.sh
cmake/android/: AndroidManifest.xml.in
examples/QZXingLive/: main.qml
src/: CMakeLists.txt  Logging.cpp  Logging.h  QZXing.cpp  QZXing.pri  QZXingFilter.cpp  QZXingFilter.h  qzxing.cmake
